--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "apexcharts": "^5.3.6",
+    "chart.js": "^4.5.1",
     "react": "^19.2.0",
+    "react-apexcharts": "^1.9.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0"
   },
