--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "@mui/x-charts": "^8.26.0",
     "apexcharts": "^5.3.6",
     "chart.js": "^4.5.1",
     "react": "^19.2.0",
