--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-apexcharts": "^1.9.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
