--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expense_tracker",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@mui/x-charts": "^8.26.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "apexcharts": "^5.3.6",
     "chart.js": "^4.5.1",
     "react": "^19.2.0",
@@ -22,6 +23,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
