--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-charts": "^8.26.0",
     "@reduxjs/toolkit": "^2.11.2",
     "apexcharts": "^5.3.6",
+    "axios": "^1.13.4",
     "chart.js": "^4.5.1",
     "react": "^19.2.0",
     "react-apexcharts": "^1.9.0",
